[project]
name = "claw-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.139.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.51.0",
    "websockets>=15.0.1",
    "websocket-client>=1.8.0",
    "requests>=2.34.2",
]
